Fix setting R commandline options

BUG: 490961